welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:9: error: missing parameter type
    if (NbBiscuit=>3){
        ^