welcome.lessons.welcome.loopdowhile.Poucet1.scala.code

while (sortieTrouvee()==false){
  var NbBiscuit = 0
  for (compteur <- 1 to 5){
    avance()
    if (estSurBiscuit()==true){
      NbBiscuit = NbBiscuit + 1
     }
    if (NbBiscuit=>3){
      gauche()
    } else { droite()}}
}